--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,10 +8,10 @@
 
 body, button, input, select, textarea {
     color: #404040;
-    font-family: "Comfortaa", Arial, sans-serif;
-    font-size: 1rem;
+    font-family: "Questrial", Arial, sans-serif;
+    font-size: 1.5rem;
     line-height: 1.5;
-    padding: 0;
+    padding: 20px;
     margin: 0;
 }
 
@@ -47,3 +47,11 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25%;
 }
 
+.jokes-btn {
+    background-color: pink;
+    border: 3px solid hotpink;
+    border-radius: 15px;
+    font-weight: 600;
+    padding: 10px;
+    margin: 0px;
+}
