--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,10 +1,10 @@
 .footer {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: start;
+    justify-content: space-between;
     border-bottom: 1px solid lightblue;
     padding: 0.5em 0 0.5em 1em;
-    margin-bottom: 2em;
+    /* margin-bottom: 2em; */
     position: fixed;
     z-index: 11;
     bottom: 0;
@@ -15,5 +15,9 @@
 
 .footer__item {
     margin: 0 1rem;
+}
+
+.footer__item img {
+    width: 75px;
 }
 
