--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -40,15 +40,32 @@ h1, h2, h3, h4, h5, h6 {
 .details {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-}
-
-.details__text {
-    font-weight: 900;
 }
 
 .details__info {
     font-weight: 100;
+    padding-bottom: 10px;
+}
+
+.details__text {
+    font-weight: 600;
+    padding-right: 10px;
+}
+
+.details__user {
+    font-weight: 400;
+    padding: 0px;
+}
+
+.details__user a {
+    color: pink;
+    font-weight: 400;
+    padding: 0px;
+}
+
+.details__when {
+    font-weight: 400;
+    padding-left: 5px;
 }
 
 .actionIcon {
@@ -78,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25%;
 }
 
+/* dad jokes button */
 .jokes-btn {
     background-color: pink;
     border: 3px solid PaleVioletRed;
