added .gitignore file

--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -1,5 +1,5 @@
 .giffygram__feed {
-    padding: 7rem 0;
+    padding: 0px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
