--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -48,14 +48,14 @@
     font-size: 6rem;
 }
 
-.post {
+/* .post {
     margin: 0 25%;
     flex-basis: 50%;
-}
+} */
 
-.post__image {
+/* .post__image {
     width: 100%;
-}
+} */
 
 .post__actions {
     display: flex;
