--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,23 +1,31 @@
 .footer {
     display: flex;
-    flex-wrap: nowrap;
+    flex-direction: row;
     justify-content: space-between;
-    border-bottom: 1px solid lightblue;
-    padding: 0.5em 0 0.5em 1em;
-    /* margin-bottom: 2em; */
-    position: fixed;
-    z-index: 11;
-    bottom: 0;
-    width: 100%;
+    border-top: 1px solid lightblue;
+    padding: 20px 20px;
+    /* position: fixed;
+    bottom: 0; */
     background-color: whitesmoke;
-    margin: auto;
+    margin: 10px 0px;
 }
 
 .footer__item {
-    margin: 0 1rem;
+    flex-basis: 30%;
+    text-align: center;
 }
 
-.footer__item img {
+.footer__left {
+    flex-basis: 30%;
+    text-align: left;
+    padding: 10px;
+}
+
+.footer__left img {
     width: 75px;
+    padding: 0px;
 }
 
+.footer__name {
+    text-align: center;
+    margin: 0px;
