--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,70 +1,70 @@
 .navigation {
     display: flex;
+    flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: start;
+    justify-content: space-around;
     border-bottom: 1px solid lightblue;
-    padding: 0.5em 0 0.5em 1em;
-    margin-bottom: 2em;
-    position: fixed;
-    z-index: 11;
-    top: 0;
+    padding: 20px;
     width: 100%;
     background-color: whitesmoke;
-    margin: auto;
 }
 
 .navigation__search {
-    margin-left: 3rem;
+    margin: auto auto;
 }
 
-.navigation__item {
-    vertical-align: baseline;
+.navigation__left {
+    text-align: left;
+    margin: auto auto;
+}
+
+.navigation__right {
+    text-align: right;
+    margin: auto auto;
 }
 
 .navigation__name {
-    font-size: 1.5rem;
-    padding-left: 0.5rem;
-    padding-top: 0.1rem;
+    margin: auto auto;
+    font-size: 26px;
 }
 
-.navigation__icon > img {
-    width: 50px;
+.navigation__icon img {
+    width: 75px;
 }
 
 
 .navigation__message {
-    margin-left: auto;
-    margin-right: 4em;
+    /* margin-left: auto;
+    margin-right: 30px; */
     display: flex;
     flex-direction: row;
-    position: relative;
+    /* position: relative; */
 }
 
 .navigation__message > img {
-    height: 2rem;
+    height: 60px;
 }
 
-.notification__count{
+/* .notification__count{
     background-color:goldenrod;
     font-size: small;
     position: absolute;
     padding:2px;
     top: 5px;
-    left: 3rem;
-    min-width: 1.25rem;
+    left: 30px;
+    min-width: 20px;
     text-align: center;
     border-radius: 25px;
-}
+} */
 
 .navigation__messageItem {
-    flex: 1;
+    /* flex: 1; */
 }
 
-.navigation__logout {
-    margin-right: 2em;
-}
+/* .navigation__logout {
+    margin-right: 30px;
+} */
 
 #directMessageIcon {
     cursor: pointer;
 }
-
