--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -3,11 +3,11 @@
     flex-direction: row;
     justify-content: space-between;
     border-top: 1px solid lightblue;
-    padding: 20px 20px;
+    padding: 20px 0px 10px 20px;
     /* position: fixed;
     bottom: 0; */
     background-color: whitesmoke;
-    margin: 10px 0px;
+    margin-top: 10px;
 }
 
 .footer__item {
@@ -23,9 +23,84 @@
 
 .footer__left img {
     width: 75px;
-    padding: 0px;
+    padding-left: 20px;
+}
+
+.footer__right {
+    flex-basis: 30%;
+    text-align: right;
+    padding-right: 20px;
+    margin: auto auto;
 }
 
 .footer__name {
     text-align: center;
+    margin-top: 10px;
+}
+
+.giffy {
+    font-weight: 700;
+    text-align: center;
     margin: 0px;
+}
+
+/************************************/
+
+/* dropup button styling */
+/* Dropup Button */
+.dropbtn {
+    font-size: 16px;
+    font-weight: bold;
+    position: relative;
+    display: inline-block;
+    background-color: powderblue;
+    padding: 15px;
+    border: 3px solid darkturquoise;
+    border-radius: 15px;
+    white-space: nowrap;
+    /* background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none; */
+  }
+  
+  /* The container <div> - needed to position the dropup content */
+  .dropup {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropup content (Hidden by Default) */
+  .dropup-content {
+    display: none;
+    position: absolute;
+    bottom: 56px;
+    background-color: #f1f1f1;
+    width: 156px;
+    font-size: 14px;
+    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+    /* z-index: 1; */
+  }
+  
+  /* Links inside the dropup */
+  .dropup-content a {
+    color: black;
+    font-size: 16px;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropup links on hover */
+  .dropup-content a:hover {background-color: #ddd}
+  
+  /* Show the dropup menu on hover */
+  .dropup:hover .dropup-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropup button when the dropup content is shown */
+  .dropup:hover .dropbtn {
+    background-color: #2980B9;
+  }
