--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -73,14 +73,19 @@
   
   /* Dropup content (Hidden by Default) */
   .dropup-content {
+    text-align: center !important;
     display: none;
     position: absolute;
     bottom: 56px;
+    left: unset !important;
+    right: -48px !important;
     background-color: #f1f1f1;
-    width: 156px;
+    width: 150px;
     font-size: 14px;
-    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-    /* z-index: 1; */
+    z-index: 1;
+    -webkit-transform: translatex(-50%);
+    -o-transform: translatex(-50%);
+    transform: translatex(-50%);
   }
   
   /* Links inside the dropup */
