--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,7 +4,7 @@
   flex-wrap: nowrap;
   justify-content: center;
   border-top: 1px solid lightblue;
-  padding: 10px;
+  padding: 0px;
   position: fixed;
   left: 0;
   right: 0;
@@ -14,18 +14,20 @@
 }
 
 .footer__left {
+  /* align-self: flex-end; */
   flex-basis: 20%;
-  text-align: center;
-  margin: auto auto;
+  text-align: left;
+  padding: 10px 0px;
 }
 
 .footer__left img {
   width: 125px;
   text-align: left;
   padding: 0px;
-  margin: 0px;
+  margin: auto 0px;
+  vertical-align: middle;
 }
-
+ 
 .footer__middle {
   flex-basis: 50%;
   text-align: center;
@@ -34,23 +36,23 @@
 .footer__right {
   flex-basis: 20%;
   text-align: right;
-  padding-right: 10px;
-  margin: auto auto;
+  margin: auto 0px;
 }
 
 .footer__name {
+  text-align: center;
+  /* margin-top: 30px; */
+}
+
+.giffy {
+  font-size: 26px;
+  font-weight: 700;
   text-align: center;
   margin-top: 30px;
 }
 
 .copyright {
-  margin-top: 40px 0px 0px 0px;
-}
-
-.giffy {
-  font-weight: 700;
-  text-align: center;
-  margin: 0px;
+  margin-top: 40px;
 }
 
 /************************************/
@@ -58,22 +60,16 @@
 /* dropup button styling */
 /* Dropup Button */
 .dropbtn {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   position: relative;
   display: inline-block;
   white-space: nowrap;
-
   color: rgb(124, 212, 223);
   background-color: white;
   border: 3px solid lightgray;
   border-radius: 8px;
   padding: 15px;
-
-  /* background-color: powderblue;
-  padding: 15px;
-  border: 3px solid darkturquoise;
-  border-radius: 15px; */
 }
   
 /* The container <div> - needed to position the dropup content */
@@ -87,12 +83,12 @@
   text-align: center !important;
   display: none;
   position: absolute;
-  bottom: 56px;
+  bottom: 64px;
   left: unset !important;
-  right: -60px !important;
+  right: -70px !important;
   background-color: #f1f1f1;
-  width: 150px;
-  font-size: 14px;
+  width: 160px;
+  font-size: 16px;
   z-index: 1;
   -webkit-transform: translatex(-50%);
   -o-transform: translatex(-50%);
