--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,21 +2,20 @@
 @import "footer.css";
 @import "feed.css";
 @import "post.css";
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+/* @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One"); */
 
 /* Typography */
 
 body, button, input, select, textarea {
     color: #404040;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 20px;
-    /* line-height: 20px; */
     padding: 0px;
     margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Patua One", serif;
+    font-family: "PT Serif Caption", serif;
     letter-spacing: 2px;
 }
 
@@ -38,7 +37,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 200px;
+    margin-bottom: 175px;
 }
 
 .center {
@@ -54,7 +53,7 @@ header {
     background-color: #EDF9FB;
     border-radius: 15px;
     padding: 20px 0px;
-    margin-top: 20px;
+    margin: 40px 0px;
 }
 
 .jokes-btn {
@@ -97,9 +96,8 @@ header {
 }
 
 .post__image {
-    /* border: 5px solid rgb(0, 185, 188); */
     border: 8px solid powderblue;
-    border-radius: 10px;
+    border-radius: 15px;
     margin: 10px 0px;
 }
 
