--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -4,6 +4,12 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     border-bottom: 3px solid lightblue;
+
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+
     padding: 10px 10px 5px 10px;
     width: 100%;
     background-color: whitesmoke;
