--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -112,8 +112,7 @@
   text-decoration: none;
   display: block;
   font-size: 18px;
-  font-weight: bold;
-  /* border-bottom: 1px solid black; */
+  font-weight: bolder;
 }
 .links:hover {
   background-color: powderblue;
