--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,16 @@
 
 /* Typography */
 
-body, button, input, select, textarea {
+body {
+    color: #404040;
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+}
+
+button, input, select, textarea {
     color: #404040;
     font-family: "Poppins", sans-serif;
     font-size: 20px;
@@ -23,7 +32,8 @@ h1, h2, h3, h4, h5, h6 {
 header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    margin: auto;
+    /* justify-content: space-between; */
 }
 
 .giffygram {
