updated main.js, footer.js, footer.css, and navigation.css

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -20,7 +20,7 @@
 .footer__left img {
   width: 125px;
   text-align: left;
-  padding: auto 0px;
+  padding-left:30px;
   margin: auto 0px;
   vertical-align: middle;
 }
