--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,7 +2,6 @@
 @import "footer.css";
 @import "feed.css";
 @import "post.css";
-/* @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One"); */
 
 /* Typography */
 
@@ -15,13 +14,20 @@ body {
     text-align: center;
 }
 
-button, input, select, textarea {
+button {
     color: #404040;
     font-family: "Poppins", sans-serif;
     font-size: 20px;
-    padding: 0px;
-    margin: 0px;
     text-align: center;
+    padding: 0px;
+}
+
+input, select, textarea {
+    color: #404040;
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    text-align: left;
+    padding: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -33,7 +39,6 @@ header {
     display: flex;
     flex-direction: row;
     margin: auto;
-    /* justify-content: space-between; */
 }
 
 .giffygram {
