--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   border-top: 3px solid lightblue;
   padding: 0px 10px;
   position: fixed;
@@ -12,60 +12,51 @@
 }
 
 .footer__left {
+  align-self: center;
+  flex-basis: 30%;
   text-align: left;
-  padding-top: 17px;
+  padding-top: 12px;
   margin: 0px;
 }
 
 .footer__left img {
   width: 125px;
   text-align: left;
-  padding-left:30px;
-  margin: auto 0px;
-  vertical-align: middle;
+  padding-left: 30px;
+  padding-bottom: 5px;
 }
  
 .footer__middle {
+  flex-basis: 30%;
 margin: auto auto;
 text-align: center;
 } 
 
-.example__menu {
-  text-align: center;
-  margin: auto auto;
-  white-space: nowrap;
-}
-
-.drop-text {
-  white-space: nowrap;
-}
-
 .post-count {
   white-space: nowrap;
-}
-
-.footer__name {
-  text-align: center;
 }
 
 .giffy {
   font-size: 26px;
   font-weight: 700;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 .copyright {
-  margin-top: 40px;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .footer__right {
+  flex-basis: 30%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   text-align: right;
-  margin: auto auto;
+  margin: auto 0px;
+  /* padding-right: 50px; */
 }
 
 .col1 {
