--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -5,9 +5,9 @@ justify-content: center;
 }
 
 .new-post {
-    width: 500px;
+    width: 520px;
     text-align: center;
-    padding: 0px 30px 20px 30px;
+    padding: 10px 30px 20px 30px;
     margin: 30px 0px 20px 0px;
     background-color: #EDF9FB;
     border-radius: 15px;
@@ -30,8 +30,21 @@ justify-content: center;
 }
 
 .new-entry-title {
-    width: 490px;
     text-align: left;
+}
+
+.new-post__input {
+    width: 509px;
+    text-align: left;
+    padding-left: 5px; /* this sets padding of placeholder text  */
+    margin-top: 10px;
+}
+
+.new-post__input--desc {
+    width: 511px;
+    text-align: left;
+    padding-left: 5px; /* this sets padding of placeholder text  */
+    margin-top: 10px;
 }
 
 .new-entry-url {
@@ -42,13 +55,6 @@ justify-content: center;
 .new-entry-desc {
     width: 492px;
     text-align: left;
-}
-
-.new-post__input {
-    width: 100%;
-    text-align: left;
-    padding-left: 5px;
-    margin: 10px 0px 0px 0px;
 }
 
 /* submit & cancel buttons */
@@ -89,7 +95,7 @@ justify-content: center;
     border: 3px solid lightgray;
     border-radius: 15px;
     padding: 5px 10px;
-    margin: 15px 5px 0px 5px;
+    margin: 30px 15px 5px 15px;
 }
 
 
