--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -13,7 +13,7 @@ justify-content: center;
     border-radius: 15px;
 }
 
-.add-post h2 {
+.add-post h2, h3 {
     font-size: 28px;
     font-weight: 600;
     text-align: center;
