--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -62,6 +62,13 @@ header {
     text-align: center;
 }
 
+.userNotExist {
+    text-align: center;
+    background-color: white;
+    font-size: 24px;
+    color: powderblue;
+}
+
 .flex-container {
     width: 68%;
     align-self: center;
