--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -85,10 +85,26 @@ justify-content: center;
     margin: 15px 5px 0px 5px;
 }
 
+.post-actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.my-likes {
+    font-size: 18px;
+    font-weight: bolder;
+    white-space: nowrap;
+    color: rgb(124, 212, 223);
+    padding: 0px 10px;
+    margin: 30px 40px 5px 0px;
+}
+
 .postBtns {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-right: 40px;
 }
 
 .post-btn {
@@ -99,8 +115,8 @@ justify-content: center;
     background-color: white;
     border: 3px solid lightgray;
     border-radius: 15px;
-    padding: 5px 10px;
-    margin: 30px 15px 5px 15px;
+    padding: 0px 10px;
+    margin: 30px 5px 5px;
 }
 
 /* .miniMode {
